syntax = "proto3";

package token_service.v1;

import "google/protobuf/empty.proto";
import "common/authn/claims.proto";

option go_package = "github.com/devexps/go-examples/micro-blog/api/gen/go/token_service/v1;v1";
option java_multiple_files = true;
option java_package = "dev.gomicro.api.token_service.v1";

// The token service definition.
service TokenService {
  rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenReply);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenReply);
  rpc RemoveToken (RemoveTokenRequest) returns (google.protobuf.Empty);
}

enum TokenPlatform {
  TOKEN_PLATFORM_UNSPECIFIED = 0;
  TOKEN_PLATFORM_WEB = 1;
  TOKEN_PLATFORM_ANDROID = 2;
  TOKEN_PLATFORM_IOS = 3;
}

message GenerateTokenRequest {
  common.authn.Claims tokenInfo = 1;
}

message GenerateTokenReply {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenReply {
  common.authn.Claims tokenInfo = 1;
}

message RemoveTokenRequest {
  common.authn.Claims tokenInfo = 1;
  bool all = 2;
}